correção no contador de tempo e configuração para funcionar mobile

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         </ul>      
         
         <section class="container-box">
-            <div class="timer">
-              0
-            </div>
+            <div class="timer">0</div>
             <div class="label">Segundos</div>
         </section>
         
